# timency

./: CMakeLists.txt  README.md
concept/: tui_prototype.numbers
data/: test.json
src/: data.c  data.h  main.c  tui.c  tui.h
